--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
         </form>
 
         
-       <h1> Hello, World! </h1>
+       <h1> Hello, People! </h1>
        <h2>welcome to my WebPage!</h2>
        <h3 class="space" style="text-align: center;">Dont Click Here</h3>
 
