added a new line

--- a/hello.html
+++ b/hello.html
@@ -21,6 +21,7 @@
 
         
        <h1> Hello, People! </h1>
+       <h3>new feature</h3>
        <h2>welcome to my WebPage!</h2>
        <h3 class="space" style="text-align: center;">Dont Click Here</h3>
 
